--- a/la_diam-frontend/src/Header/Header.css
+++ b/la_diam-frontend/src/Header/Header.css
@@ -1,26 +1,39 @@
 /* Header.css */
 .app-header {
-  background: linear-gradient(to bottom, #831616 60%, #fff 40%);
+  background-color: #831616;
+  /* background: linear-gradient(to bottom, #831616 60%, #fff 40%); */
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  /* padding: 0 20px; */
+  /* height: 200px; */
+  /*  */
+  /* position: relative; */
+  overflow: hidden;
+  height: 10vh;
+}
+
+
+.header-content {
   display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  height: 200px;
-  box-sizing: border-box;
-  position: relative;
-  overflow: hidden;
-}
-
-.header-logo {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .logo-image {
-  height: 200px;
-  width: auto;
+  height: 10vh;
+}
+
+.header-icons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
 }
 
 .header-actions {
