--- a/la_diam-frontend/src/Components/Product/Product.css
+++ b/la_diam-frontend/src/Components/Product/Product.css
@@ -2,15 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background-color: green;
-    margin: 20px;
+    background-color: green;   
 }
 
 .image{
-    width: 300px;
-    height: 300px;
+    width: 100px;
+    /* height: 300px; */
     object-fit: cover;
     border-radius: 10px;
 }
